# haskell-book

./: .coveralls.yml  .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  git-hooks.nix  haskell-book.cabal  hie.yaml  hpc-coveralls.nix  package.yaml  pkg.nix  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Ackermann.hs  Arith2.hs  Arith3.hs  Arith4.hs  BinaryTrees.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter24.hs  Chapter25.hs  Chapter26.hs  Chapter27.hs  Chapter28.hs  Chapter29.hs  Chapter30.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  Cipher.hs  Database.hs  DetermineTheType.hs  EqInstances.hs  GADTs.hs  GreetIfCool1.hs  GreetIfCool2.hs  Hutton.hs  Lenses.hs  Lib.hs  Mood.hs  (+14 more)
test/: Spec.hs  hie.yaml
test/Test/: Chapter14.hs  Chapter14Spec.hs  Chapter15.hs  Chapter15Spec.hs  Chapter16.hs  Chapter16Spec.hs  Chapter17.hs  Chapter17Spec.hs  Chapter18.hs  Chapter18Spec.hs  Chapter20.hs  Chapter20Spec.hs  Chapter21.hs  Chapter21Spec.hs  Chapter8.hs  Chapter8Spec.hs  Cipher.hs  CipherSpec.hs  WordNumber.hs  WordNumberSpec.hs
